Fixed race condition when closing Undertow channel.